--- a/NotePadMVC/WebContent/npstyle.css
+++ b/NotePadMVC/WebContent/npstyle.css
@@ -17,7 +17,9 @@ body {
 }
 
 .jumbotron {
-   background: rgb(200, 54, 54); /* This is for ie8 and below */
-   background: rgba(200, 54, 54, 0.5);
-	 
+   background: rgba(226, 229, 255, 0.5);
+}
+
+.signIn {
+
 }
