--- a/NotePadMVC/WebContent/ui.css
+++ b/NotePadMVC/WebContent/ui.css
@@ -3,6 +3,11 @@ html {
 	
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
 .loginForm {
 	text-align:center;
 }
@@ -59,3 +64,38 @@ ul{
 	border-radius: 10px;
 	opacity: 0.1;
 }
+
+
+
+/* Footer */
+
+footer {
+    background-color: rgb(34, 34, 34);
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 10px;
+    padding-bottom: 50px;
+    z-index: 10;
+}
+
+.footer p, a {
+    font-size: calc(.7em + .2vw);
+    color: #878686;
+}
+
+.footer a:hover {
+    color: #2f7a94;
+}
+
+@media only screen and (max-width: 300px) {
+    footer {
+        height: 50px;
+        padding: 5px;
+    }
+}
+
